fixes #22 add WebSocket to update subscribers when the nodes changed
